Fix OSGi tests on JDK 17
Signed-off-by: jansupol <jan.supol@oracle.com>